--- a/lecture2/classwork/index3.html
+++ b/lecture2/classwork/index3.html
@@ -5,36 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exam</title>
   </head>
-  <body style="display: flex; flex-direction: column">
-    <div
-      style="
-        height: 200px;
-        width: 100%;
-        background-color: blue;
-        color: #fff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      "
+  <body style="margin: 0; padding: 0; display: flex; flex-direction: column">
+    <table
+      border="0"
+      cellspacing="0"
+      cellpadding="0"
+      style="width: 100%; border-collapse: collapse"
     >
-      <h1>Smart Examination Portal</h1>
-    </div>
-    <div
-      style="
-        width: 100%;
-        height: 50px;
-        background-color: rgb(0, 204, 255);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-      "
-    >
-      <a href="#">Home</a>
-      <a href="#">|</a>
-      <a href="#">About</a>
-      <a href="#">|</a>
-      <a href="#">Course</a>
-    </div>
+      <!-- Header -->
+      <tr>
+        <td
+          style="
+            height: 200px;
+            background-color: blue;
+            color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          "
+        >
+          <h1>Smart Examination Portal</h1>
+        </td>
+      </tr>
+
+      <!-- Navigation Bar -->
+      <tr>
+        <td
+          style="
+            height: 50px;
+            background-color: rgb(0, 204, 255);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 20px;
+          "
+        >
+          <a href="#" style="text-decoration: none; color: black">Home</a>
+          <span>|</span>
+          <a href="#" style="text-decoration: none; color: black">About</a>
+          <span>|</span>
+          <a href="#" style="text-decoration: none; color: black">Course</a>
+        </td>
+      </tr>
+
+      
+      <tr>
+        <td
+          style="
+            height: 50px;
+            background-color: rgba(3, 10, 35, 0.667);
+            color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          "
+        >
+          <marquee behavior="scroll" direction="left">
+            Welcome to Smart Examination Portal
+          </marquee>
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
