--- a/Lecture5/assignment/Question8.html
+++ b/Lecture5/assignment/Question8.html
@@ -4,35 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photo Gallery</title>
-    <link rel="stylesheet" href="Question6.css" />
+    <link rel="stylesheet" href="Question8.css" />
   </head>
   <body>
     <h1>Photo Gallery</h1>
     <div class="gallery">
-      <div class="photo">
+      <figure>
         <img src="https://picsum.photos/300/200?random=1" alt="Photo 1" />
-        <div class="caption">Beautiful Landscape</div>
-      </div>
-      <div class="photo">
+        <figcaption>Caption 1</figcaption>
+      </figure>
+      <figure>
         <img src="https://picsum.photos/300/200?random=2" alt="Photo 2" />
-        <div class="caption">City Skyline</div>
-      </div>
-      <div class="photo">
+        <figcaption>Caption 2</figcaption>
+      </figure>
+      <figure>
         <img src="https://picsum.photos/300/200?random=3" alt="Photo 3" />
-        <div class="caption">Nature Scene</div>
-      </div>
-      <div class="photo">
+        <figcaption>Caption 3</figcaption>
+      </figure>
+      <figure>
         <img src="https://picsum.photos/300/200?random=4" alt="Photo 4" />
-        <div class="caption">Architecture</div>
-      </div>
-      <div class="photo">
+        <figcaption>Caption 4</figcaption>
+      </figure>
+      <figure>
         <img src="https://picsum.photos/300/200?random=5" alt="Photo 5" />
-        <div class="caption">Abstract Art</div>
-      </div>
-      <div class="photo">
+        <figcaption>Caption 5</figcaption>
+      </figure>
+      <figure>
         <img src="https://picsum.photos/300/200?random=6" alt="Photo 6" />
-        <div class="caption">Wildlife</div>
-      </div>
+        <figcaption>Caption 6</figcaption>
+      </figure>
     </div>
   </body>
 </html>
