--- a/Lecture5/assignment/Question1.html
+++ b/Lecture5/assignment/Question1.html
@@ -1,4 +1,4 @@
--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,25 +10,25 @@
     <header>
       <h1>John Doe</h1>
       <nav>
-        <a href="#home">Home</a>
         <a href="#about">About</a>
+        <a href="#portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
-    <main id="home">
-      <section class="bio">
+    <main>
+      <section id="about">
         <h2>About Me</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.
+          eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </p>
-        <img src="https://via.placeholder.com/200x200" alt="Profile Image" />
+      </section>
+      <section id="image">
+        <img src="https://via.placeholder.com/300x300" alt="Profile Image" />
       </section>
     </main>
     <footer>
-      <p>&copy; 2023 John Doe. All rights reserved.</p>
+      <p>&copy; 2023 John Doe</p>
     </footer>
   </body>
 </html>
