--- a/Lecture5/assignment/Question5.html
+++ b/Lecture5/assignment/Question5.html
@@ -3,44 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pricing Table</title>
+    <title>Pricing Section</title>
     <link rel="stylesheet" href="Question5.css" />
   </head>
   <body>
-    <h1>Choose Your Plan</h1>
-    <div class="pricing-container">
+    <h1>Pricing Plans</h1>
+    <div class="pricing">
       <div class="plan">
-        <h2>Basic</h2>
-        <div class="price">$9.99/month</div>
+        <h3>Basic</h3>
+        <p class="price">$10/month</p>
         <ul>
           <li>Feature 1</li>
           <li>Feature 2</li>
-          <li>Feature 3</li>
         </ul>
-        <a href="#" class="btn">Choose Basic</a>
       </div>
       <div class="plan popular">
-        <h2>Standard</h2>
-        <div class="price">$19.99/month</div>
+        <h3>Standard</h3>
+        <p class="price">$20/month</p>
         <ul>
           <li>Feature 1</li>
           <li>Feature 2</li>
           <li>Feature 3</li>
-          <li>Feature 4</li>
         </ul>
-        <a href="#" class="btn">Choose Standard</a>
       </div>
       <div class="plan">
-        <h2>Premium</h2>
-        <div class="price">$29.99/month</div>
+        <h3>Premium</h3>
+        <p class="price">$30/month</p>
         <ul>
           <li>Feature 1</li>
           <li>Feature 2</li>
           <li>Feature 3</li>
           <li>Feature 4</li>
-          <li>Feature 5</li>
         </ul>
-        <a href="#" class="btn">Choose Premium</a>
       </div>
     </div>
   </body>
